<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exercise7</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="skill">Professional Skill</string>
    <string name="phone">Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="dialog_message">Are you sure you want to confirm these information.</string>
    <string name="dialog_title">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_second">Second</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="title_activity_third">ThirdActivity</string>
    
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>

</resources>
