<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SecondActivity" >

    <TextView
        android:id="@+id/info_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/last_name" />
    
    <TextView 
        android:id="@+id/value_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/info_last_name"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/info_last_name" />
    
    <TextView
        android:id="@+id/info_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_last_name"
        android:layout_alignParentLeft="true"
        android:text="@string/first_name" />
    
    <TextView 
        android:id="@+id/value_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/info_first_name"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/info_first_name" />
    
    <TextView
        android:id="@+id/info_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_first_name"
        android:layout_alignParentLeft="true"
        android:text="@string/age" />
    
    <TextView 
        android:id="@+id/value_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/info_age"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/info_age" />
    
    <TextView
        android:id="@+id/info_skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_age"
        android:layout_alignParentLeft="true"
        android:text="@string/skill" />
    
    <TextView 
        android:id="@+id/value_skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/info_skill"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/info_skill" />
    
    <TextView
        android:id="@+id/info_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_skill"
        android:layout_alignParentLeft="true"
        android:text="@string/phone" />
    
    <TextView 
        android:id="@+id/value_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/info_phone"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/info_phone" />
    
    <Button 
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_phone"
        android:layout_centerHorizontal="true"
        android:text="@string/ok"
        android:onClick="send"/>
    
    <Button 
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_phone"
        android:layout_toRightOf="@id/ok"
        android:layout_alignParentRight="true"
        android:text="@string/back"
        android:onClick="back"/>

</RelativeLayout>
