<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/last_name" />
    
    <EditText 
        android:id="@+id/edit_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/last_name"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/last_name" />
    
    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_last_name"
        android:layout_alignParentLeft="true"
        android:text="@string/first_name" />
    
    <EditText 
        android:id="@+id/edit_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/first_name"
        android:layout_below="@id/edit_last_name"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/first_name" />
    
    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_first_name"
        android:layout_alignParentLeft="true"
        android:text="@string/age" />
    
    <EditText 
        android:id="@+id/edit_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/age"
        android:layout_below="@id/edit_first_name"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/age" />
    
    <TextView
        android:id="@+id/skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_age"
        android:layout_alignParentLeft="true"
        android:text="@string/skill" />
    
    <EditText 
        android:id="@+id/edit_skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/skill"
        android:layout_below="@id/edit_age"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/skill" />
    
    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_skill"
        android:layout_alignParentLeft="true"
        android:text="@string/phone" />
    
    <EditText 
        android:id="@+id/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/phone"
        android:layout_below="@id/edit_skill"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/phone" />
    
    <Button 
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_phone"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"
        android:onClick="confirm"/>

</RelativeLayout>
